Added ASF and HC logos to the HttpCore tutorial in html format
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@740095 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/docbkx/resources/css/hc-tutorial.css
+++ b/src/docbkx/resources/css/hc-tutorial.css
@@ -279,3 +279,35 @@ div.note * td,
     .programlisting * .lineannotation * {
     color: blue;
 }
+
+.bannerLeft, .bannerRight {
+  font-size: xx-large;
+  font-weight: bold;
+}
+
+.bannerLeft img, .bannerRight img {
+  margin: 0px;
+}
+
+.bannerLeft img {
+  float:left;
+  text-shadow: #7CFC00;
+}
+
+.bannerRight img {
+  float:right;
+  text-shadow: #7CFC00;
+}
+
+.banner {
+  padding: 0px;
+}
+
+.banner img {
+  border: none;
+}
+
+.clear  {
+  clear:both;
+  visibility: hidden;
+}
